Update MetaSystem implementation

--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -156,7 +156,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"159.48\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"159.48\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"159.48\" y=\"-147.79\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 8 -->\n",
@@ -168,8 +168,8 @@
        "<!-- foo&#45;&gt;8 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M178.87,-138.93C201.48,-124.28 239.05,-99.94 264.83,-83.24\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"266.93,-86.06 273.42,-77.68 263.12,-80.18 266.93,-86.06\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M178.87,-138.93C201.48,-124.28 239.05,-99.94 264.83,-83.24\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"266.93,-86.06 273.42,-77.68 263.12,-80.18 266.93,-86.06\"/>\n",
        "<text text-anchor=\"middle\" x=\"161.35\" y=\"-114.89\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
@@ -181,8 +181,8 @@
        "<!-- foo&#45;&gt;j -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;j</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M148.73,-134.85C133.89,-111.87 106.98,-70.21 89.63,-43.34\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"92.51,-41.35 84.14,-34.85 86.63,-45.15 92.51,-41.35\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M148.73,-134.85C133.89,-111.87 106.98,-70.21 89.63,-43.34\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"92.51,-41.35 84.14,-34.85 86.63,-45.15 92.51,-41.35\"/>\n",
        "<text text-anchor=\"middle\" x=\"87.18\" y=\"-92.9\" font-family=\"Times,serif\" font-size=\"14.00\">JumpJets</text>\n",
        "</g>\n",
        "<!-- 0 -->\n",
@@ -194,8 +194,8 @@
        "<!-- foo&#45;&gt;0 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M140.21,-164.25C117.74,-179.14 80.42,-203.87 54.81,-220.84\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"52.69,-218.05 46.29,-226.49 56.56,-223.88 52.69,-218.05\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M140.21,-164.25C117.74,-179.14 80.42,-203.87 54.81,-220.84\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"52.69,-218.05 46.29,-226.49 56.56,-223.88 52.69,-218.05\"/>\n",
        "<text text-anchor=\"middle\" x=\"63.51\" y=\"-196.35\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [1, 1] -->\n",
@@ -207,15 +207,15 @@
        "<!-- foo&#45;&gt;[1, 1] -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;[1, 1]</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M170.4,-168.01C185.41,-190.7 212.55,-231.74 230.21,-258.43\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"227.36,-260.48 235.8,-266.89 233.2,-256.61 227.36,-260.48\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M170.4,-168.01C185.41,-190.7 212.55,-231.74 230.21,-258.43\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"227.36,-260.48 235.8,-266.89 233.2,-256.61 227.36,-260.48\"/>\n",
        "<text text-anchor=\"middle\" x=\"160.3\" y=\"-217.02\" font-family=\"Times,serif\" font-size=\"14.00\">XYLocation</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffed42dd690>"
+       "<graphviz.graphs.Digraph at 0x7fff140fdf50>"
       ]
      },
      "metadata": {},
@@ -245,7 +245,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"167.57\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"167.57\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"167.57\" y=\"-147.79\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 8 -->\n",
@@ -257,27 +257,27 @@
        "<!-- foo&#45;&gt;8 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M186.96,-138.93C209.58,-124.28 247.15,-99.94 272.93,-83.24\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"275.02,-86.06 281.51,-77.68 271.22,-80.18 275.02,-86.06\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M186.96,-138.93C209.58,-124.28 247.15,-99.94 272.93,-83.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"275.02,-86.06 281.51,-77.68 271.22,-80.18 275.02,-86.06\"/>\n",
        "<text text-anchor=\"middle\" x=\"169.45\" y=\"-114.89\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
        "<g id=\"node3\" class=\"node\">\n",
        "<title>j</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"81.36\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"81.36\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"81.36\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">j</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;j -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;j</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M156.83,-134.85C141.99,-111.87 115.08,-70.21 97.73,-43.34\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"100.61,-41.35 92.24,-34.85 94.73,-45.15 100.61,-41.35\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M156.83,-134.85C141.99,-111.87 115.08,-70.21 97.73,-43.34\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"100.61,-41.35 92.24,-34.85 94.73,-45.15 100.61,-41.35\"/>\n",
        "<text text-anchor=\"middle\" x=\"95.28\" y=\"-92.9\" font-family=\"Times,serif\" font-size=\"14.00\">JumpJets</text>\n",
        "</g>\n",
        "<!-- [4, 5] -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>[4, 5]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"35.1\" cy=\"-239.26\" rx=\"35.19\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"35.1\" cy=\"-239.26\" rx=\"35.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"35.1\" y=\"-235.56\" font-family=\"Times,serif\" font-size=\"14.00\">[4, 5]</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;[4, 5] -->\n",
@@ -296,15 +296,15 @@
        "<!-- foo&#45;&gt;5 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M178.5,-168.01C193.59,-190.83 220.95,-232.19 238.59,-258.87\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"235.74,-260.9 244.17,-267.31 241.57,-257.04 235.74,-260.9\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M178.5,-168.01C193.59,-190.83 220.95,-232.19 238.59,-258.87\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"235.74,-260.9 244.17,-267.31 241.57,-257.04 235.74,-260.9\"/>\n",
        "<text text-anchor=\"middle\" x=\"174.55\" y=\"-217.24\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffed9237790>"
+       "<graphviz.graphs.Digraph at 0x7fff04eda1d0>"
       ]
      },
      "metadata": {},
