--- a/harmony/dma/MechaCombat/WeaponsSystem.ipynb
+++ b/harmony/dma/MechaCombat/WeaponsSystem.ipynb
@@ -138,7 +138,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"330.07\" cy=\"-183.36\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"330.07\" cy=\"-183.36\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"330.07\" y=\"-179.66\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
@@ -150,8 +150,8 @@
        "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M325.39,-201.36C318.31,-228.54 304.84,-280.3 296.49,-312.37\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"293,-311.87 293.87,-322.43 299.77,-313.64 293,-311.87\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M325.39,-201.36C318.31,-228.54 304.84,-280.3 296.49,-312.37\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"293,-311.87 293.87,-322.43 299.77,-313.64 293,-311.87\"/>\n",
        "<text text-anchor=\"middle\" x=\"257.94\" y=\"-260.66\" font-family=\"Times,serif\" font-size=\"14.00\">OverheatValue</text>\n",
        "</g>\n",
        "<!-- 3 -->\n",
@@ -163,28 +163,28 @@
        "<!-- foo&#45;&gt;3 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;3</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M322.14,-166.04C311.04,-141.79 290.77,-97.49 277.7,-68.94\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"280.75,-67.2 273.41,-59.56 274.39,-70.11 280.75,-67.2\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M322.14,-166.04C311.04,-141.79 290.77,-97.49 277.7,-68.94\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"280.75,-67.2 273.41,-59.56 274.39,-70.11 280.75,-67.2\"/>\n",
        "<text text-anchor=\"middle\" x=\"237.42\" y=\"-106.29\" font-family=\"Times,serif\" font-size=\"14.00\">OverheatDamage</text>\n",
        "</g>\n",
        "<!-- foo&#45;LongRangeWeapons -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>foo&#45;LongRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"413.67\" cy=\"-319.88\" rx=\"121.58\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"413.67\" cy=\"-319.88\" rx=\"121.58\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"413.67\" y=\"-316.18\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;LongRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;foo -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M402.57,-301.75C387.96,-277.9 362.21,-235.85 345.66,-208.82\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"348.63,-206.98 340.43,-200.28 342.66,-210.63 348.63,-206.98\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M402.57,-301.75C387.96,-277.9 362.21,-235.85 345.66,-208.82\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"348.63,-206.98 340.43,-200.28 342.66,-210.63 348.63,-206.98\"/>\n",
        "<text text-anchor=\"middle\" x=\"301.61\" y=\"-244.09\" font-family=\"Times,serif\" font-size=\"14.00\">LongRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M331.71,-333.27C329.68,-333.6 327.69,-333.93 325.73,-334.25\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"325.03,-330.82 315.72,-335.89 326.16,-337.73 325.03,-330.82\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M331.71,-333.27C329.68,-333.6 327.69,-333.93 325.73,-334.25\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"325.03,-330.82 315.72,-335.89 326.16,-337.73 325.03,-330.82\"/>\n",
        "<text text-anchor=\"middle\" x=\"358.22\" y=\"-337.56\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 5 -->\n",
@@ -196,28 +196,28 @@
        "<!-- foo&#45;LongRangeWeapons&#45;&gt;5 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;LongRangeWeapons&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M471.43,-303.93C490.15,-298.76 510.34,-293.19 526.9,-288.62\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"527.98,-291.95 536.69,-285.91 526.12,-285.2 527.98,-291.95\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M471.43,-303.93C490.15,-298.76 510.34,-293.19 526.9,-288.62\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"527.98,-291.95 536.69,-285.91 526.12,-285.2 527.98,-291.95\"/>\n",
        "<text text-anchor=\"middle\" x=\"468.66\" y=\"-285.07\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>foo&#45;MidRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"176.38\" cy=\"-139.04\" rx=\"116.18\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"176.38\" cy=\"-139.04\" rx=\"116.18\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"176.38\" y=\"-135.34\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;MidRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;foo -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M231.43,-154.92C252.75,-161.06 276.51,-167.92 295.37,-173.35\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"294.44,-176.73 305.02,-176.14 296.38,-170 294.44,-176.73\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M231.43,-154.92C252.75,-161.06 276.51,-167.92 295.37,-173.35\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"294.44,-176.73 305.02,-176.14 296.38,-170 294.44,-176.73\"/>\n",
        "<text text-anchor=\"middle\" x=\"194.9\" y=\"-167.93\" font-family=\"Times,serif\" font-size=\"14.00\">MidRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;3 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;3</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M193.13,-120.8C207.63,-105.01 228.68,-82.09 244.33,-65.06\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"246.91,-67.42 251.1,-57.69 241.75,-62.69 246.91,-67.42\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M193.13,-120.8C207.63,-105.01 228.68,-82.09 244.33,-65.06\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"246.91,-67.42 251.1,-57.69 241.75,-62.69 246.91,-67.42\"/>\n",
        "<text text-anchor=\"middle\" x=\"189.23\" y=\"-81.73\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 2 -->\n",
@@ -229,14 +229,14 @@
        "<!-- foo&#45;MidRangeWeapons&#45;&gt;2 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
        "<title>foo&#45;MidRangeWeapons&#45;&gt;2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M99.06,-125.57C86.55,-123.4 74.13,-121.23 63.22,-119.33\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"63.72,-115.87 53.27,-117.6 62.52,-122.76 63.72,-115.87\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M99.06,-125.57C86.55,-123.4 74.13,-121.23 63.22,-119.33\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"63.72,-115.87 53.27,-117.6 62.52,-122.76 63.72,-115.87\"/>\n",
        "<text text-anchor=\"middle\" x=\"111.64\" y=\"-111.25\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "<!-- foo&#45;ShortRangeWeapons -->\n",
        "<g id=\"node8\" class=\"node\">\n",
        "<title>foo&#45;ShortRangeWeapons</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"491.79\" cy=\"-132.49\" rx=\"124.28\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"491.79\" cy=\"-132.49\" rx=\"124.28\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"491.79\" y=\"-128.79\" font-family=\"Times,serif\" font-size=\"14.00\">foo&#45;ShortRangeWeapons</text>\n",
        "</g>\n",
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;foo -->\n",
@@ -249,8 +249,8 @@
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;5 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
        "<title>foo&#45;ShortRangeWeapons&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M500.39,-150.45C512.62,-175.97 535.12,-222.92 549.27,-252.45\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"546.25,-254.24 553.73,-261.74 552.56,-251.21 546.25,-254.24\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M500.39,-150.45C512.62,-175.97 535.12,-222.92 549.27,-252.45\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"546.25,-254.24 553.73,-261.74 552.56,-251.21 546.25,-254.24\"/>\n",
        "<text text-anchor=\"middle\" x=\"495.33\" y=\"-205.25\" font-family=\"Times,serif\" font-size=\"14.00\">Damage</text>\n",
        "</g>\n",
        "<!-- 0 -->\n",
@@ -262,15 +262,15 @@
        "<!-- foo&#45;ShortRangeWeapons&#45;&gt;0 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
        "<title>foo&#45;ShortRangeWeapons&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M508.48,-114.6C526.98,-94.77 556.87,-62.73 577.11,-41.04\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"579.83,-43.26 584.09,-33.56 574.71,-38.48 579.83,-43.26\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M508.48,-114.6C526.98,-94.77 556.87,-62.73 577.11,-41.04\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"579.83,-43.26 584.09,-33.56 574.71,-38.48 579.83,-43.26\"/>\n",
        "<text text-anchor=\"middle\" x=\"512.29\" y=\"-81.62\" font-family=\"Times,serif\" font-size=\"14.00\">Modifier</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffead250390>"
+       "<graphviz.graphs.Digraph at 0x7ffee04b9790>"
       ]
      },
      "metadata": {},
