Move to importnb

--- a/harmony/dma/Chess/ChessSystem.ipynb
+++ b/harmony/dma/Chess/ChessSystem.ipynb
@@ -9,47 +9,14 @@
    "source": [
     "from dataclasses import dataclass, asdict\n",
     "from functools import partial\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bd6258e7-4408-4fd5-a46e-e4673399b4c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipynb.fs.full.quantumsystem import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a160dba-0f78-452a-94a1-9b1aae0cd13a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipynb.fs.full.MovementSystem import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cec31d89-34f1-4268-932c-25957ef9630a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipynb.fs.full.DamageSystem import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4159ad6f-2afb-44f5-bbf2-3abd730b4b3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipynb.fs.full.WeaponsSystem import *"
+    "from datetime import datetime\n",
+    "\n",
+    "from importnb import Notebook\n",
+    "with Notebook():\n",
+    "    from quantumsystem import *\n",
+    "    from MovementSystem import *\n",
+    "    from DamageSystem import *\n",
+    "    from WeaponsSystem import *"
    ]
   },
   {
