--- a/harmony/dma/Chess/MovementSystem.ipynb
+++ b/harmony/dma/Chess/MovementSystem.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs"
+    "from importnb import Notebook\n",
+    "with Notebook():\n",
+    "    from quantumsystem import QuantumSystem, qs"
    ]
   },
   {
