--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -32,8 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.Observer import Observer, CaptureConfiguration, Camera, \\\n",
-    "    hStackImages, vStackImages, ChangeSet, TrackedObject"
+    "from importnb import Notebook\n",
+    "with Notebook():\n",
+    "    from Observer import Observer, CaptureConfiguration, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject"
    ]
   },
   {
@@ -208,7 +209,7 @@
     "        currentLocation = self.changeSetToRealCenter(trackedObject)\n",
     "        previousLocation = self.changeSetToRealCenter(previousChangeSet)\n",
     "        return distanceFormula(previousLocation, currentLocation)\n",
-    "\n",
+    "        \n",
     "    def distanceBetweenObjects(self, firstObject, secondObject):\n",
     "        firstCenter = self.changeSetToRealCenter(firstObject)\n",
     "        secondCenter = self.changeSetToRealCenter(secondObject)\n",
