--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -751,6 +751,7 @@
     "        except ValueError:\n",
     "            print(f\"New Memory\")\n",
     "            self.memory.append(objDef)\n",
+    "            existingIndex = len(self.memory) - 1\n",
     "        self.lastMemory = objDef\n",
     "        \n",
     "        self.transitions.append(Transition(\n",
@@ -758,6 +759,7 @@
     "            self.cycleCounter,\n",
     "            {camName: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
     "             for camName, cam in cameras.items()}))\n",
+    "        return self.memory[existingIndex]\n",
     "\n",
     "    def undoLastChange(self):\n",
     "        if len(self.transitions) == 0:\n",
