--- a/harmony/dma/MechaCombat/DamageSystem.ipynb
+++ b/harmony/dma/MechaCombat/DamageSystem.ipynb
@@ -9,8 +9,9 @@
    },
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs, System, HyperSystem\n",
-    "from ipynb.fs.full.quantumsystem import IntegerSystem, IntegerArraySystem"
+    "from importnb import Notebook\n",
+    "with Notebook():\n",
+    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, IntegerArraySystem"
    ]
   },
   {
@@ -189,7 +190,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"red\" cx=\"244.64\" cy=\"-181.04\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"244.64\" cy=\"-181.04\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"244.64\" y=\"-177.34\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
@@ -201,8 +202,8 @@
        "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M271.87,-181.24C299.81,-181.45 343.47,-181.78 374.6,-182.01\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"374.61,-185.51 384.63,-182.08 374.66,-178.51 374.61,-185.51\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M271.87,-181.24C299.81,-181.45 343.47,-181.78 374.6,-182.01\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"374.61,-185.51 384.63,-182.08 374.66,-178.51 374.61,-185.51\"/>\n",
        "<text text-anchor=\"middle\" x=\"323.24\" y=\"-170.42\" font-family=\"Times,serif\" font-size=\"14.00\">EngineCriticalHits</text>\n",
        "</g>\n",
        "<!-- 4 -->\n",
@@ -214,8 +215,8 @@
        "<!-- foo&#45;&gt;4 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;4</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M240.66,-162.97C234.45,-134.69 222.37,-79.75 215,-46.22\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"218.35,-45.17 212.79,-36.15 211.52,-46.67 218.35,-45.17\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M240.66,-162.97C234.45,-134.69 222.37,-79.75 215,-46.22\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"218.35,-45.17 212.79,-36.15 211.52,-46.67 218.35,-45.17\"/>\n",
        "<text text-anchor=\"middle\" x=\"310.83\" y=\"-108.4\" font-family=\"Times,serif\" font-size=\"14.00\">FireControlCriticalHits</text>\n",
        "</g>\n",
        "<!-- 5 -->\n",
@@ -227,8 +228,8 @@
        "<!-- foo&#45;&gt;5 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M222.84,-191.76C197.32,-204.31 154.83,-225.21 125.85,-239.46\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"124.02,-236.46 116.59,-244.02 127.1,-242.74 124.02,-236.46\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M222.84,-191.76C197.32,-204.31 154.83,-225.21 125.85,-239.46\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"124.02,-236.46 116.59,-244.02 127.1,-242.74 124.02,-236.46\"/>\n",
        "<text text-anchor=\"middle\" x=\"120.85\" y=\"-219.41\" font-family=\"Times,serif\" font-size=\"14.00\">MPCriticalHits</text>\n",
        "</g>\n",
        "<!-- 6 -->\n",
@@ -240,8 +241,8 @@
        "<!-- foo&#45;&gt;6 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;6</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M257.44,-197.06C275.52,-219.68 308.67,-261.17 329.75,-287.53\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"327.15,-289.89 336.13,-295.52 332.62,-285.52 327.15,-289.89\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M257.44,-197.06C275.52,-219.68 308.67,-261.17 329.75,-287.53\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"327.15,-289.89 336.13,-295.52 332.62,-285.52 327.15,-289.89\"/>\n",
        "<text text-anchor=\"middle\" x=\"220.09\" y=\"-246.1\" font-family=\"Times,serif\" font-size=\"14.00\">WeaponsCriticalHits</text>\n",
        "</g>\n",
        "<!-- 7 -->\n",
@@ -266,15 +267,15 @@
        "<!-- foo&#45;&gt;0 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M227.02,-167.32C203.02,-153.18 159.64,-131.96 128.98,-119.12\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"130.09,-115.79 119.51,-115.26 127.45,-122.27 130.09,-115.79\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M227.02,-167.32C203.02,-153.18 159.64,-131.96 128.98,-119.12\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"130.09,-115.79 119.51,-115.26 127.45,-122.27 130.09,-115.79\"/>\n",
        "<text text-anchor=\"middle\" x=\"89\" y=\"-132.02\" font-family=\"Times,serif\" font-size=\"14.00\">ArmorStructuralDamage</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;0 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M219.28,-174.43C191.84,-163.61 148.36,-142.84 120.55,-127.38\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"122.18,-124.28 111.76,-122.36 118.71,-130.36 122.18,-124.28\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M219.28,-174.43C191.84,-163.61 148.36,-142.84 120.55,-127.38\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"122.18,-124.28 111.76,-122.36 118.71,-130.36 122.18,-124.28\"/>\n",
        "<text text-anchor=\"middle\" x=\"92.41\" y=\"-154.7\" font-family=\"Times,serif\" font-size=\"14.00\">ArmorPlatingDamage</text>\n",
        "</g>\n",
        "<!-- 9 -->\n",
@@ -286,15 +287,15 @@
        "<!-- foo&#45;&gt;9 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
        "<title>foo&#45;&gt;9</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M257.59,-165.17C275.88,-142.75 309.42,-101.64 330.74,-75.51\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"333.59,-77.56 337.2,-67.59 328.17,-73.13 333.59,-77.56\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M257.59,-165.17C275.88,-142.75 309.42,-101.64 330.74,-75.51\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"333.59,-77.56 337.2,-67.59 328.17,-73.13 333.59,-77.56\"/>\n",
        "<text text-anchor=\"middle\" x=\"245.66\" y=\"-124.14\" font-family=\"Times,serif\" font-size=\"14.00\">ArmorPlating</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff801fefd0>"
+       "<graphviz.graphs.Digraph at 0x7ffee65607d0>"
       ]
      },
      "metadata": {},
@@ -340,7 +341,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"229.72\" cy=\"-181.04\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"229.72\" cy=\"-181.04\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"229.72\" y=\"-177.34\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
@@ -352,8 +353,8 @@
        "<!-- foo&#45;&gt;1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M256.96,-181.24C284.9,-181.45 328.56,-181.78 359.68,-182.01\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"359.69,-185.51 369.72,-182.08 359.75,-178.51 359.69,-185.51\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M256.96,-181.24C284.9,-181.45 328.56,-181.78 359.68,-182.01\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"359.69,-185.51 369.72,-182.08 359.75,-178.51 359.69,-185.51\"/>\n",
        "<text text-anchor=\"middle\" x=\"308.32\" y=\"-170.42\" font-family=\"Times,serif\" font-size=\"14.00\">EngineCriticalHits</text>\n",
        "</g>\n",
        "<!-- 4 -->\n",
@@ -378,8 +379,8 @@
        "<!-- foo&#45;&gt;5 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M207.93,-191.76C182.4,-204.31 139.92,-225.21 110.94,-239.46\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"109.1,-236.46 101.67,-244.02 112.19,-242.74 109.1,-236.46\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M207.93,-191.76C182.4,-204.31 139.92,-225.21 110.94,-239.46\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"109.1,-236.46 101.67,-244.02 112.19,-242.74 109.1,-236.46\"/>\n",
        "<text text-anchor=\"middle\" x=\"105.94\" y=\"-219.41\" font-family=\"Times,serif\" font-size=\"14.00\">MPCriticalHits</text>\n",
        "</g>\n",
        "<!-- 6 -->\n",
@@ -391,8 +392,8 @@
        "<!-- foo&#45;&gt;6 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;6</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M242.52,-197.06C260.6,-219.68 293.76,-261.17 314.83,-287.53\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"312.24,-289.89 321.22,-295.52 317.71,-285.52 312.24,-289.89\"/>\n",
+       "<path fill=\"none\" stroke=\"slateblue\" d=\"M242.52,-197.06C260.6,-219.68 293.76,-261.17 314.83,-287.53\"/>\n",
+       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"312.24,-289.89 321.22,-295.52 317.71,-285.52 312.24,-289.89\"/>\n",
        "<text text-anchor=\"middle\" x=\"205.18\" y=\"-246.1\" font-family=\"Times,serif\" font-size=\"14.00\">WeaponsCriticalHits</text>\n",
        "</g>\n",
        "<!-- 7 -->\n",
@@ -404,8 +405,8 @@
        "<!-- foo&#45;&gt;7 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>foo&#45;&gt;7</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M225.74,-199.13C219.51,-227.44 207.41,-282.44 200.02,-316\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"196.53,-315.57 197.8,-326.09 203.37,-317.07 196.53,-315.57\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M225.74,-199.13C219.51,-227.44 207.41,-282.44 200.02,-316\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"196.53,-315.57 197.8,-326.09 203.37,-317.07 196.53,-315.57\"/>\n",
        "<text text-anchor=\"middle\" x=\"272.38\" y=\"-261.37\" font-family=\"Times,serif\" font-size=\"14.00\">ArmorStructural</text>\n",
        "</g>\n",
        "<!-- 9 -->\n",
@@ -445,7 +446,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff801fefd0>"
+       "<graphviz.graphs.Digraph at 0x7ffee40c76d0>"
       ]
      },
      "metadata": {},
@@ -473,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab28191e-bb65-43f0-9c5c-8ab12d5e595c",
+   "id": "a04304c5-3611-4a74-a495-09fe4b72b56a",
    "metadata": {},
    "outputs": [],
    "source": []
