--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, IntegerArraySystem"
+    "from importnb import Notebook\n",
+    "with Notebook():\n",
+    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, IntegerArraySystem"
    ]
   },
   {
@@ -112,6 +114,18 @@
     "    @Elevation.d\n",
     "    @XYLocation.d\n",
     "    @Movement.MovementSpeed.d\n",
+    "    def can_move(cls, entity, delta, movementspeed, xylocation, elevation):\n",
+    "        xyz = json.dumps(xylocation + [elevation])\n",
+    "        deltaDistance = sum([d * d for d in delta]) ** 0.5\n",
+    "\n",
+    "        if deltaDistance > movementspeed:\n",
+    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({deltaDistance}) than its movement speed ({movementspeed})\")\n",
+    "        return True\n",
+    "\n",
+    "    @classmethod\n",
+    "    @Elevation.d\n",
+    "    @XYLocation.d\n",
+    "    @Movement.MovementSpeed.d\n",
     "    def move(cls, entity, delta, movementspeed, xylocation, elevation):\n",
     "        xyz = json.dumps(xylocation + [elevation])\n",
     "        deltaDistance = sum([d * d for d in delta]) ** 0.5\n",
@@ -156,7 +170,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"159.48\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"159.48\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"159.48\" y=\"-147.79\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 8 -->\n",
@@ -168,14 +182,14 @@
        "<!-- foo&#45;&gt;8 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"coral\" d=\"M178.87,-138.93C201.48,-124.28 239.05,-99.94 264.83,-83.24\"/>\n",
-       "<polygon fill=\"coral\" stroke=\"coral\" points=\"266.93,-86.06 273.42,-77.68 263.12,-80.18 266.93,-86.06\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M178.87,-138.93C201.48,-124.28 239.05,-99.94 264.83,-83.24\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"266.93,-86.06 273.42,-77.68 263.12,-80.18 266.93,-86.06\"/>\n",
        "<text text-anchor=\"middle\" x=\"161.35\" y=\"-114.89\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
        "<g id=\"node3\" class=\"node\">\n",
        "<title>j</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"73.26\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"73.26\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"73.26\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">j</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;j -->\n",
@@ -194,14 +208,14 @@
        "<!-- foo&#45;&gt;0 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;0</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M140.21,-164.25C117.74,-179.14 80.42,-203.87 54.81,-220.84\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"52.69,-218.05 46.29,-226.49 56.56,-223.88 52.69,-218.05\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M140.21,-164.25C117.74,-179.14 80.42,-203.87 54.81,-220.84\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"52.69,-218.05 46.29,-226.49 56.56,-223.88 52.69,-218.05\"/>\n",
        "<text text-anchor=\"middle\" x=\"63.51\" y=\"-196.35\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "<!-- [1, 1] -->\n",
        "<g id=\"node5\" class=\"node\">\n",
        "<title>[1, 1]</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"247.14\" cy=\"-284.03\" rx=\"35.19\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"247.14\" cy=\"-284.03\" rx=\"35.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"247.14\" y=\"-280.33\" font-family=\"Times,serif\" font-size=\"14.00\">[1, 1]</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;[1, 1] -->\n",
@@ -215,7 +229,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff140fdf50>"
+       "<graphviz.graphs.Digraph at 0x7ffec812d910>"
       ]
      },
      "metadata": {},
@@ -245,7 +259,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"167.57\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"167.57\" cy=\"-151.49\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"167.57\" y=\"-147.79\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- 8 -->\n",
@@ -257,8 +271,8 @@
        "<!-- foo&#45;&gt;8 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M186.96,-138.93C209.58,-124.28 247.15,-99.94 272.93,-83.24\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"275.02,-86.06 281.51,-77.68 271.22,-80.18 275.02,-86.06\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M186.96,-138.93C209.58,-124.28 247.15,-99.94 272.93,-83.24\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"275.02,-86.06 281.51,-77.68 271.22,-80.18 275.02,-86.06\"/>\n",
        "<text text-anchor=\"middle\" x=\"169.45\" y=\"-114.89\" font-family=\"Times,serif\" font-size=\"14.00\">MovementSpeed</text>\n",
        "</g>\n",
        "<!-- j -->\n",
@@ -270,8 +284,8 @@
        "<!-- foo&#45;&gt;j -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
        "<title>foo&#45;&gt;j</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M156.83,-134.85C141.99,-111.87 115.08,-70.21 97.73,-43.34\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"100.61,-41.35 92.24,-34.85 94.73,-45.15 100.61,-41.35\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M156.83,-134.85C141.99,-111.87 115.08,-70.21 97.73,-43.34\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"100.61,-41.35 92.24,-34.85 94.73,-45.15 100.61,-41.35\"/>\n",
        "<text text-anchor=\"middle\" x=\"95.28\" y=\"-92.9\" font-family=\"Times,serif\" font-size=\"14.00\">JumpJets</text>\n",
        "</g>\n",
        "<!-- [4, 5] -->\n",
@@ -283,8 +297,8 @@
        "<!-- foo&#45;&gt;[4, 5] -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;[4, 5]</title>\n",
-       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M148.31,-164.25C126.48,-178.72 90.64,-202.46 65.13,-219.36\"/>\n",
-       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"62.98,-216.59 56.58,-225.03 66.85,-222.42 62.98,-216.59\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M148.31,-164.25C126.48,-178.72 90.64,-202.46 65.13,-219.36\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"62.98,-216.59 56.58,-225.03 66.85,-222.42 62.98,-216.59\"/>\n",
        "<text text-anchor=\"middle\" x=\"66.72\" y=\"-195.61\" font-family=\"Times,serif\" font-size=\"14.00\">XYLocation</text>\n",
        "</g>\n",
        "<!-- 5 -->\n",
@@ -296,15 +310,15 @@
        "<!-- foo&#45;&gt;5 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
        "<title>foo&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M178.5,-168.01C193.59,-190.83 220.95,-232.19 238.59,-258.87\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"235.74,-260.9 244.17,-267.31 241.57,-257.04 235.74,-260.9\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M178.5,-168.01C193.59,-190.83 220.95,-232.19 238.59,-258.87\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"235.74,-260.9 244.17,-267.31 241.57,-257.04 235.74,-260.9\"/>\n",
        "<text text-anchor=\"middle\" x=\"174.55\" y=\"-217.24\" font-family=\"Times,serif\" font-size=\"14.00\">Elevation</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fff04eda1d0>"
+       "<graphviz.graphs.Digraph at 0x7ffeccc69010>"
       ]
      },
      "metadata": {},
