Implement interaction available status with object table row border

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -161,17 +161,58 @@
     "                    eventResult=json.dumps(realCoord))\n",
     "        return objDef\n",
     "\n",
-    "    def take_action(self, actor, target, result=None):\n",
+    "    def takeAction(self, actor, target, result=None):\n",
     "        return ObjectAction(actor, target, result=result)\n",
     "\n",
-    "    def units_moved_this_round(self):\n",
+    "    # IN PROGRESS\n",
+    "    def objectHasMoved(self, harmonyObject):\n",
+    "        try:\n",
+    "            if self.cc.rsc.trackedObjectLastDistance(harmonyObject) > 10:\n",
+    "                return True\n",
+    "        except Exception as e:\n",
+    "            print(f\"Failed {e}\")\n",
+    "            print(f\"Object: {harmonyObject}\")\n",
+    "            print(f\"{self.cc.rsc.trackedObjectLastDistance(harmonyObject)}\")\n",
+    "        return False\n",
+    "\n",
+    "    def unitsMovedThisRound(self):\n",
     "        mechs = Mech.entities()\n",
     "        moved = []\n",
     "        for m in mechs:\n",
     "            harmonyObject = self.findObject(m.entity)\n",
-    "            if self.cc.rsc.trackedObjectLastDistance(harmonyObject) > 10:\n",
+    "            if self.objectHasMoved(harmonyObject):\n",
     "                moved.append(m)\n",
-    "        return moved"
+    "        return moved\n",
+    "\n",
+    "    def objectHasDeclared(self, harmonyObject):\n",
+    "        for de in GameEvent.get_declared_events():\n",
+    "            if harmonyObject.oid == de.GameEventObject.terminant:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def unitsDeclaredThisRound(self):\n",
+    "        mechs = Mech.entities()\n",
+    "        declared = []\n",
+    "        for m in mechs:\n",
+    "            harmonyObject = self.findObject(m.entity)\n",
+    "            if self.objectHasDeclared(harmonyObject):\n",
+    "                declared.append(m)\n",
+    "        return declared\n",
+    "\n",
+    "    def objectHasResolved(self, harmonyObject):\n",
+    "        for re in GameEvent.get_resolved_events():\n",
+    "            if harmonyObject.oid == re.GameEventObject.terminant:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "    def unitsResolvedThisRound(self):\n",
+    "        mechs = Mech.entities()\n",
+    "        resolved = []\n",
+    "        for m in mechs:\n",
+    "            harmonyObject = self.findObject(m.entity)\n",
+    "            if self.objectHasDeclared(harmonyObject):\n",
+    "                resolved.append(m)\n",
+    "        return resolved"
    ]
   },
   {
