Fix db transactions; fix action count reporting

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -210,7 +210,7 @@
     "        resolved = []\n",
     "        for m in mechs:\n",
     "            harmonyObject = self.findObject(m.entity)\n",
-    "            if self.objectHasDeclared(harmonyObject):\n",
+    "            if self.objectHasResolved(harmonyObject):\n",
     "                resolved.append(m)\n",
     "        return resolved"
    ]
