--- a/harmony/dma/MechaCombat/GameEventSystem.ipynb
+++ b/harmony/dma/MechaCombat/GameEventSystem.ipynb
@@ -71,6 +71,11 @@
     "        return [cls(event[0]) for event in qs.get(edge_name=GameEvent, terminant=\"DeclaredEvents\")]\n",
     "\n",
     "    @classmethod\n",
+    "    def get_declared_no_action_events(cls):\n",
+    "        de = cls.get_declared_events()\n",
+    "        return [e for e in de if e.GameEventType.terminant == \"NoAction\"]\n",
+    "\n",
+    "    @classmethod\n",
     "    def get_resolved_events(cls):\n",
     "        return [cls(event[0]) for event in qs.get(edge_name=GameEvent, terminant=\"ResolvedEvents\")]\n",
     "\n",
