--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -15,6 +15,7 @@
     "import shutil\n",
     "import sqlite3\n",
     "from contextlib import contextmanager\n",
+    "import threading\n",
     "\n",
     "import graphviz\n",
     "from IPython.display import Image"
@@ -34,6 +35,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "76d8e854-1197-4b8b-b045-2304a81e2cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_LOCK = threading.Lock()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "4074583d-e855-4d4c-ae8a-d374505c36c5",
    "metadata": {},
@@ -45,19 +56,23 @@
     "\n",
     "    @contextmanager\n",
     "    def cursor(self):\n",
+    "        self.__connect__()\n",
     "        cur = self.conn.cursor()\n",
+    "        cur.execute(\"PRAGMA journal_mode=WAL\")\n",
+    "        cur.execute(\"PRAGMA synchronous=NORMAL\")\n",
     "        yield cur\n",
     "        cur.close()\n",
+    "        self.conn.close()\n",
+    "        self.conn = None\n",
     "    \n",
-    "    def connect(self):\n",
-    "        if self.conn is not None:\n",
-    "            self.conn.close()\n",
-    "\n",
+    "    def __connect__(self):\n",
     "        # self.conn = sqlite3.connect(\"file:dma?mode=memory&cache=shared\", uri=True, check_same_thread=False)\n",
-    "        self.conn = sqlite3.connect(\"file:harmony.db?cache=shared\", uri=True, check_same_thread=False)\n",
-    "        with self.cursor() as cur:\n",
-    "            cur.execute(\"PRAGMA journal_mode=WAL\")\n",
-    "            cur.execute(\"PRAGMA synchronous=NORMAL\")\n",
+    "        if self.conn is None:\n",
+    "            self.conn = sqlite3.connect(\n",
+    "                \"file:harmony.db?cache=shared\",\n",
+    "                uri=True,\n",
+    "                check_same_thread=False,\n",
+    "                timeout=5)\n",
     "\n",
     "    def reset(self):\n",
     "        with self.cursor() as cur:\n",
@@ -67,23 +82,23 @@
     "                edge_name TEXT NOT NULL,\n",
     "                end_node TEXT NOT NULL,\n",
     "                UNIQUE(start_node, edge_name) ON CONFLICT REPLACE);\"\"\")\n",
-    "        self.conn.commit()\n",
+    "            self.conn.commit()\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.connect()\n",
+    "        self.conn = None\n",
     "\n",
     "    def put(self, start_node, edge_name, end_node):\n",
-    "        with self.cursor() as cur:\n",
-    "            cur.execute(f\"INSERT INTO edges VALUES ('{start_node}', '{edge_name}', '{end_node}');\")\n",
-    "        self.conn.commit()\n",
+    "        with DB_LOCK, self.cursor() as cur:\n",
+    "            cur.execute(f\"INSERT INTO edges VALUES ('{start_node}', '{edge_name}', '{end_node}')\")\n",
+    "            self.conn.commit()\n",
     "\n",
     "    def drop(self, start_node, edge_name, end_node):\n",
-    "        with self.cursor() as cur:\n",
+    "        with DB_LOCK, self.cursor() as cur:\n",
     "            try:\n",
     "                cur.execute(f\"DELETE FROM edges WHERE edge_name = '{edge_name}' AND start_node = '{start_node}' and end_node = '{end_node}'\")\n",
     "            except Exception:\n",
     "                raise Exception(f\"Failed to drop edge {start_node}-{edge_name}-{end_node}\")\n",
-    "        self.conn.commit()\n",
+    "            self.conn.commit()\n",
     "\n",
     "    def get(self,\n",
     "        start_node: str | list | None = None,\n",
@@ -111,7 +126,7 @@
     "        \n",
     "        query = f\"{query}{where_clause}\"\n",
     "        try:\n",
-    "            with self.cursor() as cur:\n",
+    "            with DB_LOCK, self.cursor() as cur:\n",
     "                results = cur.execute(query).fetchall()\n",
     "        except Exception as e:\n",
     "            raise Exception(f\"Failed to resolve query: {query}\") from e\n",
@@ -119,13 +134,13 @@
     "\n",
     "    def start_entities(self, member_edges: list):\n",
     "        edge_list = \", \".join([f\"'{me}'\" for me in member_edges])\n",
-    "        with self.cursor() as cur:\n",
+    "        with DB_LOCK, self.cursor() as cur:\n",
     "            results = cur.execute(f\"SELECT start_node FROM edges WHERE edge_name in ({edge_list})\").fetchall()\n",
     "        return list(set([r[0] for r in results]))\n",
     "\n",
     "    def end_entities(self, member_edges: list):\n",
     "        edge_list = \", \".join([f\"'{me}'\" for me in member_edges])\n",
-    "        with self.cursor() as cur:\n",
+    "        with DB_LOCK, self.cursor() as cur:\n",
     "            results = cur.execute(f\"SELECT end_node FROM edges WHERE edge_name in ({edge_list})\").fetchall()\n",
     "        return list(set([r[0] for r in results]))\n",
     "\n",
