fix db transactions; round flow functional

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -179,7 +179,7 @@
     "        mechs = Mech.entities()\n",
     "        moved = []\n",
     "        for m in mechs:\n",
-    "            harmonyObject = self.findObject(m.entity)\n",
+    "            harmonyObject = self.findObject(m)\n",
     "            if self.objectHasMoved(harmonyObject):\n",
     "                moved.append(m)\n",
     "        return moved\n",
@@ -194,7 +194,7 @@
     "        mechs = Mech.entities()\n",
     "        declared = []\n",
     "        for m in mechs:\n",
-    "            harmonyObject = self.findObject(m.entity)\n",
+    "            harmonyObject = self.findObject(m)\n",
     "            if self.objectHasDeclared(harmonyObject):\n",
     "                declared.append(m)\n",
     "        return declared\n",
@@ -205,14 +205,10 @@
     "                return True\n",
     "        return False\n",
     "\n",
-    "    def unitsResolvedThisRound(self):\n",
-    "        mechs = Mech.entities()\n",
-    "        resolved = []\n",
-    "        for m in mechs:\n",
-    "            harmonyObject = self.findObject(m.entity)\n",
-    "            if self.objectHasResolved(harmonyObject):\n",
-    "                resolved.append(m)\n",
-    "        return resolved"
+    "    def actionsToResolve(self):\n",
+    "        declared_actions = len(app.cm.unitsDeclaredThisRound())\n",
+    "        no_actions = len(GameEvent.get_declared_no_action_events())\n",
+    "        return declared_actions - no_actions"
    ]
   },
   {
