--- a/harmony/dma/MechaCombat/GameEventSystem.ipynb
+++ b/harmony/dma/MechaCombat/GameEventSystem.ipynb
@@ -81,7 +81,9 @@
     "\n",
     "    @classmethod\n",
     "    def move_event(cls, gameEvent, oldAnchor, newAnchor):\n",
+    "        print(f\"Dropping {gameEvent} -- {oldAnchor}\")\n",
     "        qs.drop(gameEvent, cls.__name__, oldAnchor)\n",
+    "        print(f\"Putting {gameEvent} -- {newAnchor}\")\n",
     "        qs.put(gameEvent, cls.__name__, newAnchor)\n",
     "\n",
     "    @classmethod\n",
