--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -205,7 +205,7 @@
     "    def trackedObjectLastDistance(self, trackedObject: TrackedObject):\n",
     "        previousChangeSet = trackedObject.previousVersion()\n",
     "        if previousChangeSet.empty:\n",
-    "            return None\n",
+    "            return 0\n",
     "        currentLocation = self.changeSetToRealCenter(trackedObject)\n",
     "        previousLocation = self.changeSetToRealCenter(previousChangeSet)\n",
     "        return distanceFormula(previousLocation, currentLocation)\n",
