Create new (in progress) move tracking functions

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -165,15 +165,20 @@
     "        return ObjectAction(actor, target, result=result)\n",
     "\n",
     "    # IN PROGRESS\n",
+    "    def distanceFromRealPoint(self, harmonyObject, realPoint):\n",
+    "        # TODO: object at realpoint? Elevation at realpoint?\n",
+    "        objectLocation = mc.XYLocation(harmonyObject.oid)\n",
+    "        return distanceFormula(objectLocation, realPoint)\n",
+    "\n",
+    "    def objectLastDistance(self, harmonyObject):\n",
+    "        currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
+    "        return self.distanceFromRealPoint(harmonyObject, currentLocation)\n",
+    "\n",
     "    def objectHasMoved(self, harmonyObject):\n",
-    "        try:\n",
-    "            if self.cc.rsc.trackedObjectLastDistance(harmonyObject) > 10:\n",
-    "                return True\n",
-    "        except Exception as e:\n",
-    "            print(f\"Failed {e}\")\n",
-    "            print(f\"Object: {harmonyObject}\")\n",
-    "            print(f\"{self.cc.rsc.trackedObjectLastDistance(harmonyObject)}\")\n",
+    "        if self.objectLastDistance(harmonyObject) > 10:\n",
+    "            return True\n",
     "        return False\n",
+    "    ##\n",
     "\n",
     "    def unitsMovedThisRound(self):\n",
     "        mechs = Mech.entities()\n",
