Begin using dma location system

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -135,6 +135,7 @@
     "        memoryIndex = self.memory.index(trackedObject)\n",
     "        harmonyObject = HarmonyObject.from_tracked_object(\n",
     "            trackedObject, objectType, objectSubType, objectKwargs)\n",
+    "        mc.XYLocation.set_relationship(harmonyObject.oid, self.cc.rsc.changeSetToRealCenter(harmonyObject))\n",
     "        self.memory[memoryIndex] = harmonyObject\n",
     "        return harmonyObject\n",
     "\n",
@@ -164,21 +165,21 @@
     "    def takeAction(self, actor, target, result=None):\n",
     "        return ObjectAction(actor, target, result=result)\n",
     "\n",
-    "    # IN PROGRESS\n",
-    "    def distanceFromRealPoint(self, harmonyObject, realPoint):\n",
+    "    def distanceFromRealPoint(self, harmonyObject: HarmonyObject, realPoint: (float, float)):\n",
     "        # TODO: object at realpoint? Elevation at realpoint?\n",
-    "        objectLocation = mc.XYLocation(harmonyObject.oid)\n",
+    "        objectLocation = mc.XYLocation(harmonyObject.oid).terminant\n",
+    "        print(f\"Determining distance between {objectLocation} and {realPoint}\")\n",
     "        return distanceFormula(objectLocation, realPoint)\n",
     "\n",
-    "    def objectLastDistance(self, harmonyObject):\n",
+    "    def objectLastDistance(self, harmonyObject: HarmonyObject):\n",
     "        currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
     "        return self.distanceFromRealPoint(harmonyObject, currentLocation)\n",
     "\n",
-    "    def objectHasMoved(self, harmonyObject):\n",
+    "    def objectHasMoved(self, harmonyObject: HarmonyObject):\n",
+    "        print(f\"Checking if {harmonyObject} has moved\")\n",
     "        if self.objectLastDistance(harmonyObject) > 10:\n",
     "            return True\n",
     "        return False\n",
-    "    ##\n",
     "\n",
     "    def unitsMovedThisRound(self):\n",
     "        mechs = Mech.entities()\n",
@@ -305,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ac7923-d6f0-4488-aa58-28776ab63f47",
+   "id": "fc00c8b6-18a4-4454-b6bd-8335b987f039",
    "metadata": {},
    "outputs": [],
    "source": []
